--- a/gradle.properties
+++ b/gradle.properties
@@ -7,10 +7,11 @@ yarn_mappings=1.17.1+build.59
 loader_version=0.11.6
 # Mod Properties
 mod_version=0.1.0
-maven_group=myth-mod-template
-archives_base_name=myth-mod-template
+maven_group=server-sync
+archives_base_name=server-sync
 # Dependencies
 # check this on https://modmuss50.me/fabric.html
 fabric_version=0.40.1+1.17
 
 night_config_version=3.6.4
+jda_version=4.3.0_277
